@@ -2,6 +2,7 @@
 
 	* Makefile.in (javaswarm.dll): For consistency, use javaswarm.dll.o
 	instead of dllinit.o.
+	(javaswarm.dll): Use local dllinit file.
 
 1999-06-05  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
 
